Fix width alignment of blog post metadata vs paragraphs

--- a/assets/css/_sass/_layouts/_blog-post.scss
+++ b/assets/css/_sass/_layouts/_blog-post.scss
@@ -3,10 +3,11 @@
 // Metadata //
 
 .post__metadata {
+	width: 100%;
+	max-width: calc(900px + 8.33vw);
 	margin: 0 auto;
 	margin-top: 1.5rem;
 	padding: 0 8.33%;
-	max-width: calc(900px + 8.33vw);
 }
 
 .post-meta__back {
